tests/ui/arg_type_mismatch.stderr
Error [E0112]: `show` wants Int (a whole number) for argument 1, but this is String (text)
  --> tests/ui/arg_type_mismatch.lex:6:10
    |
  6 |     show("hi");
    |          ^^^^
 Why: every argument must match its parameter's type
 Fix: use Int (a whole number) here
