tests/ui/arg_type_mismatch.lex
fn show(n: Int) {
    print(n);
}

fn main() {
    show("hi");
}
